# m2pi-faq-rag-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: faq_document.txt
outputs/: sample_evaluations.json  sample_queries.json
reports/: technical-decisions.md
src/: __init__.py  build_index.py  chunking.py  config.py  embeddings.py  evaluator.py  generation.py  llm.py  query.py  retrieval.py
tests/: test_core.py
