[project]
name = "m2pi-faq-rag-chatbot"
version = "0.1.0"
description = "SoyHenry AI Engineering — M2 Integrator Project: a FAQ support chatbot built with RAG (chunking + embeddings + vector search + LLM generation) that returns structured JSON."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
build-index = "src.build_index:main"
query = "src.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# OneDrive-backed folders don't support hardlinks; copy avoids sync errors.
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
